--- a/.themes/NewSpring/Styles/overrides/rock/_person-profile.less
+++ b/.themes/NewSpring/Styles/overrides/rock/_person-profile.less
@@ -7,7 +7,6 @@
 
 .personprofile {
     margin-top: 0px;
-    overflow: hidden;
 }
 
 .badge-attendance {
