--- a/.themes/NewSpring/Styles/theme/components/_navigation.less
+++ b/.themes/NewSpring/Styles/theme/components/_navigation.less
@@ -2,7 +2,7 @@
 .navbar-static-side {
     background-color: @nav-bg;
     color: @nav-color;
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0;
     bottom: 0px;
